[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timew-sawayo"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
  "gql[aiohttp]~=3.5.2",
  "timew-report~=1.4.0",
]
[project.scripts]
sawayo-sync = "timew_sawayo.main:main"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "7.2"
addopts = "--strict-markers -s --cache-clear --junitxml=test_report.xml"
testpaths = ["tests"]
